--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/superstephan1/Project-Tech#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "cows": "^2.1.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongodb": "^3.1.13"
   },
