--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "cows": "^2.1.0",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongodb": "^3.1.13"
+    "express-session": "^1.16.1",
+    "mongodb": "^3.2.6",
+    "slug": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^5.15.2"
