--- a/now.json
+++ b/now.json
@@ -1,5 +1,9 @@
 {
     "builds": [
-      { "src": "package.json", "use": "@now/static" }
-    ]
+      { "src": "package.json", "use": "@now/static" },
+      { "src": "*.js", "use": "@now/node" }
+    ],
+    "routes": [
+        { "src": "/", "dest": "views/index.ejs" }
+      ]
   }
